# pku-elective-prettify

./: .gitignore  .~lock.0.processed.xlsx#  README.md  bake-deps.bat  bake-deps.sh  build.nuitka.bat  build.spec  cli.py  cli_utils.py  palette.json  pyproject.toml  requirements.txt  tui.py  tui_utils.py
src/: cell.py  consts.py  excel.py  formatter.py  lib.py  main.py  options.py  palette.json  palette.py  table.py
