[project]
name = "pku-elective-prettify"
version = "0.2.0"
description = "Make flat `schedule.xls` into beautiful format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "excel3img>=1.5",
    "questionary>=2.1",
    #"selenium>=4.35.0", # PKU prohibit automated software to access elective system
    "xlrd>=2.0",
    "xlsxwriter>=3.2",
]
