[project]
name = "pku-elective-prettify"
version = "0.2.1"
description = "Make flat `schedule.xls` into beautiful format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1",
    "questionary>=2.1",
    "spire-xls-free>=14.12",
    "xlrd>=2.0",
    "xlsxwriter>=3.2",
]
